structmeta-tests/tests/compile_fail/parse/mismatch_delimiter_tuple.stderr
error[E0308]: mismatched types
 --> $DIR/mismatch_delimiter_tuple.rs:3:10
  |
3 | #[derive(Parse)]
  |          ^^^^^ expected struct `syn::token::Bracket`, found struct `syn::token::Paren`
4 | struct TestType(#[to_tokens("(")] syn::token::Bracket, LitStr);
  |                                   ------------------- expected due to this
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
